poke/testsuite/poke.pkl/cast-offsets-diag-3.pk
/* { dg-do compile } */

defvar x = 23#B as offset<int,0>; /* { dg-error "bigger than zero" } */
